# RegistrationProj

./: CMakeLists.txt  CMakeLists.txt.user.21ad7ac  detection.cpp  detection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
